--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -42,8 +42,14 @@
       color: #ff8787;
     }
   }
+}
+
+.TodoListItem-virtualized {
   //엘리먼트 사이사이에 테두리를 넣어 줌
   & + & {
     border-top: 1px solid #dee2e6;
+  }
+  &:nth-child(even) {
+    background: #f8f9fa;
   }
 }
